--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ openpyxl = "^3.1.2"
 pyarrow = "^15.0.0"
 tabulate = "^0.9.0"
 matplotlib = "^3.8.2"
+scipy = "^1.12.0"
 
 [tool.poetry.group.dev.dependencies]
 interrogate = "^1.5.0"
