--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pyarrow = "^15.0.0"
 tabulate = "^0.9.0"
 matplotlib = "^3.8.2"
 scipy = "^1.12.0"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 interrogate = "^1.5.0"
